--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -3,15 +3,24 @@
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
+
+<filter>
+<filter-name>log</filter-name>
+<filter-class>com.pulook.filter.LogFilter</filter-class>
+</filter>
+<filter-mapping>
+  <filter-name>log</filter-name>
+  <url-pattern>/a</url-pattern>
+</filter-mapping>
 <!-- ... -->
 <servlet>
 <servlet-name>FirstServlet</servlet-name>
-<servlet-class>com.pulook.servlet.FirstServlet</servlet-class>
+<servlet-class>com.pulook.servlet.FirstServlert</servlet-class>
 </servlet>
 <!-- ... -->
 <servlet-mapping>
 <servlet-name> FirstServlet </servlet-name>
-<url-pattern>/first/*</url-pattern>
+<url-pattern>/*</url-pattern>
 </servlet-mapping>
 <!-- ... -->
 </web-app>
