--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -4,23 +4,38 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
 
-<filter>
-<filter-name>log</filter-name>
-<filter-class>com.pulook.filter.LogFilter</filter-class>
-</filter>
-<filter-mapping>
-  <filter-name>log</filter-name>
-  <url-pattern>/a</url-pattern>
-</filter-mapping>
-<!-- ... -->
-<servlet>
-<servlet-name>FirstServlet</servlet-name>
-<servlet-class>com.pulook.servlet.FirstServlert</servlet-class>
-</servlet>
-<!-- ... -->
-<servlet-mapping>
-<servlet-name> FirstServlet </servlet-name>
-<url-pattern>/*</url-pattern>
-</servlet-mapping>
-<!-- ... -->
+    <listener>
+      <listener-class>com.pulook.listener.MyListener</listener-class>
+    </listener>
+	<filter>
+		<filter-name>log</filter-name>
+		<filter-class>com.pulook.filter.LogFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>log</filter-name>
+		<url-pattern>/a</url-pattern>
+	</filter-mapping>
+	
+	<filter>
+		<filter-name>Encoding</filter-name>
+		<filter-class>com.pulook.filter.CharactorFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>Encoding</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<!-- ... -->
+	<servlet>
+		<servlet-name>FirstServlet</servlet-name>
+		<servlet-class>com.pulook.servlet.FirstServlert</servlet-class>
+	</servlet>
+	<!-- ... -->
+	<servlet-mapping>
+		<servlet-name> FirstServlet </servlet-name>
+		<url-pattern>/*</url-pattern>
+	</servlet-mapping>
+	<!-- ... -->
+	
+	
+	
 </web-app>
